# dnd_char_builder

./: LICENSE  README.md  extract_data_from_5etools.py  pyproject.toml
src/domain/: backgrounds.py  character.py  classes.py  feats.py  items.py  scores.py  species.py  spells.py  stats.py  user.py
src/tests/domain/: test_user.py
