[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry]
name = "dnd-char-builder"
version = "0.1.0"
description = "D&D 2024 Character Creator"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pyhamcrest = "^2.1.0"
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
